--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -27,6 +27,12 @@ h1{
   font-size: 3em;
 }
 
+h2.username {
+  color: #ddd;
+  text-align: center;
+  margin-top: -.7em;
+}
+
 form {
   min-width: 200px;
 }
@@ -34,6 +40,95 @@ form {
 ul {
   padding: 0;
 }
+
+/*NAV*/
+img.avatar {
+  height: 5em;
+  width: 5em;
+  margin-left: 3.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border-radius: 100%;
+  border: 3px solid black;
+  background-color: white;
+}
+
+nav {
+  width: 12em;
+  height: 100%;
+  position: fixed;
+  background-color: #f34223;
+  // border-bottom-right-radius: 0.5em;
+  // border-bottom-style: groove;
+  border-color: #776a6a;
+}
+
+nav a {
+  display: block;
+  text-decoration: none;
+  padding-bottom: 2em;
+  padding-left: 1.8em;
+  color: black;
+  font-weight: bold;
+  margin-left: 35%;
+  margin-top: -40%;
+}
+
+.selected{
+  background-color: #ffdd35;
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav a:hover{
+  /*font-weight: bold;*/
+}
+/* entire container, keeps perspective */
+.flip-container{
+  -webkit-perspective: 1000px;
+  margin-top: 5em;
+  margin-bottom: 5em;
+}
+
+/* flip pane when hovered */
+.flipper:hover{
+  -webkit-transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back{
+  width: 110px;
+  height: 10px;
+}
+
+/* flipper speed goes here */
+.flipper{
+  -webkit-transition: all .6s;
+  -webkit-transform-style: preserve-3d;
+  position: relative;
+}
+
+/* hide back of pane during swap */
+.flipper div{
+  -webkit-backface-visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+/* front pane, placed above back */
+.front{
+  /*z-index: 2;*/
+}
+
+/* back, initially hidden pane */
+.back{
+  -webkit-transform: rotateY(180deg);
+}
+
+
+/*END NAV*/
 
 .formgroup{
   display: block;
@@ -139,7 +234,7 @@ audio {
 #chat_box {
   max-width: 15em;
   background-color: #f6af1d;
-  border-radius: 1em;
+  border-radius: 3em;
   margin: 1em;
   padding: 0.4em;
   list-style: none;
@@ -155,8 +250,8 @@ audio {
 }
 
 #chat_box.right {
-  left: 20em;
-  border-radius: 3em;
+  right: 0;
+  // border-radius: 3em;
   border-bottom-right-radius: 0;
   padding: 2em;
 }
@@ -227,12 +322,6 @@ audio {
   text-align: center;
 }
 
-
-/*#chat_box embed {
-  width: 50px;
-  height: 80px;
-}*/
-
 img.sticker {
   max-height: 10em;
   max-width: 10em;
@@ -264,15 +353,17 @@ img.login_tag {
 
 .play_sound {
   font-size: 1em;
-  // padding: .4em .8em;
+  padding: .4em .7em;
   border-radius: 2em;
   background-color: #F34223;
   width: 2em;
   height: 2em;
+  margin-left: 3em;
 }
 
 .play_sound:hover {
-  color: #fff;
+  color: #F34223;
+  background-color: #fff;
 }
 
 #input {
@@ -334,94 +425,7 @@ img.login_tag {
 /*END INPUT BUTTONS*/
 /*END CHAT
 
-/*NAV*/
-img.avatar {
-  height: 5em;
-  width: 5em;
-  margin-left: 3.5em;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  border-radius: 100%;
-  border: 3px solid black;
-  background-color: white;
-}
 
-nav {
-  width: 12em;
-  height: 100%;
-  position: fixed;
-  background-color: #f34223;
-  border-bottom-right-radius: 0.5em;
-  border-bottom-style: groove;
-  border-color: #776a6a;
-}
-
-nav a {
-  display: block;
-  text-decoration: none;
-  padding-bottom: 2em;
-  padding-left: 1.8em;
-  color: black;
-  font-weight: bold;
-  margin-left: 35%;
-  margin-top: -40%;
-}
-
-.selected{
-  background-color: #ffdd35;
-}
-
-nav ul {
-  list-style: none;
-}
-
-nav a:hover{
-  /*font-weight: bold;*/
-}
-/* entire container, keeps perspective */
-.flip-container{
-  -webkit-perspective: 1000px;
-  margin-top: 5em;
-  margin-bottom: 5em;
-}
-
-/* flip pane when hovered */
-.flipper:hover{
-  -webkit-transform: rotateY(180deg);
-}
-
-.flip-container, .front, .back{
-  width: 110px;
-  height: 10px;
-}
-
-/* flipper speed goes here */
-.flipper{
-  -webkit-transition: all .6s;
-  -webkit-transform-style: preserve-3d;
-  position: relative;
-}
-
-/* hide back of pane during swap */
-.flipper div{
-  -webkit-backface-visibility: hidden;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-/* front pane, placed above back */
-.front{
-  /*z-index: 2;*/
-}
-
-/* back, initially hidden pane */
-.back{
-  -webkit-transform: rotateY(180deg);
-}
-
-
-/*END NAV
 
 
 /*FRIEND SEARCH*/
@@ -622,7 +626,6 @@ footer {
 
 /* ABOUT PAGE END */
 
-
 /*PROGRESS BAR*/
 #progressbar .ui-progressbar-value{
   background-color: #f34223;
@@ -631,4 +634,63 @@ footer {
 @-viewport {
   width: 900px;
   height: 1280px;
+}
+
+@media (max-width: 520px) {
+  body {
+    // background:  red;
+  }
+
+  nav {
+    width: 100%;
+    height: 10em;
+    top: 0;
+  }
+
+  nav a {
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  }
+
+  .content {
+    max-width: 80%;
+    margin: 10em auto;
+  }
+
+  .current_user_box {
+    max-width: 15em;
+  }
+
+  input#input_text {
+    min-width: 100%
+  }
+
+  #chat_messages {
+    max-width: 95%;
+  }
+
+  #chat_box {
+    min-width: 15em;
+    position: relative;
+    margin: 1em auto;
+    // left:0;
+  }
+
+  #chat_box.left {
+    left: 0;
+    padding: .6em;
+    padding-left: 2em;
+  }
+
+  #chat_box.right {
+    right: 0;
+    padding: .6em;
+  }
+
+  .flipper-container {
+    display: block
+  }
+
 }
