--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -641,10 +641,15 @@ footer {
     // background:  red;
   }
 
+  * {
+    text-align: center;
+  }
+
   nav {
     width: 100%;
-    height: 10em;
+    height: 7em;
     top: 0;
+    z-index: 20;
   }
 
   nav a {
@@ -654,9 +659,86 @@ footer {
     font-weight: bold;
   }
 
+  .current_user_box {
+    width: 5em;
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  img.avatar {
+    height: 3em;
+    width: 3em;
+    margin:1em;
+    // border-radius: 100%;
+    // border: 3px solid black;
+    // background-color: white;
+  }
+
+  h2.username {
+    font-size: 1em;
+    text-align: center;
+  }
+
+  .flip-container{
+    // -webkit-perspective: 1000px;
+    margin-top: 3em;
+    display: inline-block;
+    vertical-align: top;
+    height: 3em;
+    width: 3em;
+  }
+
+  /* flip pane when hovered */
+  .flipper:hover{
+    -webkit-transform: rotateY(180deg);
+  }
+
+  .flip-container, .front, .back{
+    width: 50px;
+    height: 10px;
+  }
+
+  .front img {
+    height: 2em;
+    width: 2em;
+  }
+
+  .back {
+    font-size: .5em;
+  }
+
+  /* flipper speed goes here */
+  .flipper{
+    -webkit-transition: all .6s;
+    -webkit-transform-style: preserve-3d;
+    position: relative;
+  }
+
+  /* hide back of pane during swap */
+  .flipper div{
+    -webkit-backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  /* front pane, placed above back */
+  .front{
+    /*z-index: 2;*/
+  }
+
+  /* back, initially hidden pane */
+  .back{
+    -webkit-transform: rotateY(180deg);
+  }
+
   .content {
     max-width: 80%;
-    margin: 10em auto;
+    margin: 8em auto;
+  }
+
+  .content h2 {
+    text-align: center;
   }
 
   .current_user_box {
@@ -668,7 +750,8 @@ footer {
   }
 
   #chat_messages {
-    max-width: 95%;
+    max-width: 500px;
+    margin: auto;
   }
 
   #chat_box {
@@ -689,8 +772,6 @@ footer {
     padding: .6em;
   }
 
-  .flipper-container {
-    display: block
-  }
+
 
 }
