--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,6 +14,7 @@
         %div.current_user_box
           = image_tag(@current_user.avatar, :class => 'avatar')
           %h2.username= @current_user.username
+      %div
       = smartnav.html_safe
 
   %div.content
