--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -641,13 +641,13 @@ footer {
     // background:  red;
   }
 
-  * {
+  h1,h2,h3 {
     text-align: center;
   }
 
   nav {
     width: 100%;
-    height: 7em;
+    height: 6em;
     top: 0;
     z-index: 20;
   }
@@ -663,6 +663,7 @@ footer {
     width: 5em;
     display: inline-block;
     vertical-align: top;
+    margin-left: .5em;
   }
 
   img.avatar {
@@ -679,13 +680,20 @@ footer {
     text-align: center;
   }
 
+  nav div{
+    margin-left: -1em;
+    display: inline-block;
+    vertical-align: top;
+  }
+
   .flip-container{
     // -webkit-perspective: 1000px;
-    margin-top: 3em;
+    margin-top: 2em;
     display: inline-block;
     vertical-align: top;
     height: 3em;
     width: 3em;
+    margin-left: 6%;
   }
 
   /* flip pane when hovered */
@@ -694,8 +702,8 @@ footer {
   }
 
   .flip-container, .front, .back{
-    width: 50px;
-    height: 10px;
+    width: 40px;
+    height: 40px;
   }
 
   .front img {
