--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -670,9 +670,6 @@ footer {
     height: 3em;
     width: 3em;
     margin:1em;
-    // border-radius: 100%;
-    // border: 3px solid black;
-    // background-color: white;
   }
 
   h2.username {
@@ -780,6 +777,17 @@ footer {
     padding: .6em;
   }
 
+  // #my_chats ul li a{
+  //   width: 125%;
+  // }
 
+  // #new_chat_button:hover{
+  //   width: 125%;
+
+  // }
+
+  // #new_chat input:hover{
+  //   width: 125%;
+  // }
 
 }
