--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -777,17 +777,17 @@ footer {
     padding: .6em;
   }
 
-  // #my_chats ul li a{
-  //   width: 125%;
-  // }
+  #my_chats ul li a{
+    width: 125%;
+  }
 
-  // #new_chat_button:hover{
-  //   width: 125%;
+   #new_chat_button:hover{
+    width: 125%;
 
-  // }
+  }
 
-  // #new_chat input:hover{
-  //   width: 125%;
-  // }
+  #new_chat input:hover{
+    width: 125%;
+  }
 
 }
