--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -790,4 +790,11 @@ footer {
     width: 125%;
   }
 
+  #new_game_button:hover{
+    width: 125%;
+  }
+
+  #new_game input:hover{
+    width: 125%;
+  }
 }
