--- a/app/assets/stylesheets/single_game.css
+++ b/app/assets/stylesheets/single_game.css
@@ -4,7 +4,7 @@
     background: url(/assets/backgrounds/background1.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 600px;
+    width: 100%;
     height: 300px;
     /*margin-left: 15%;*/
     -webkit-border-radius: 0.7em;
@@ -297,7 +297,7 @@
     border-radius: 1em;
     margin-left: 1.5%;
     margin-top: -15%;
-    width: 580px;
+    width: 100%;
     height: 550px;
     overflow: scroll;
     text-align: center;
