--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -781,12 +781,15 @@ footer {
     width: 125%;
   }
 
-   #new_chat_button:hover{
+  #new_chat_button:hover{
     width: 125%;
-
   }
 
   #new_chat input:hover{
+    width: 125%;
+  }
+
+  #my_games ul li a{
     width: 125%;
   }
 
