--- a/app/assets/stylesheets/single_game.css
+++ b/app/assets/stylesheets/single_game.css
@@ -46,7 +46,7 @@
     width: 100%;
     height: 40px;
     padding: 10px 0 10px 0;
-    /*margin-left:15%;*/
+    margin-top: 15%;
     text-align: center;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -138,7 +138,7 @@
 .fireball_game{
     width: 200px;
     height: 200px;
-    left: 55%;
+    left: 650px;
     position: absolute;
 }
 
@@ -248,8 +248,9 @@
     margin-left: 1.5%;
     width: 200px;
     max-width: 20%;
-    max-height: 655px;
-    overflow: scroll;
+    max-height:950px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 
 }
 
@@ -257,6 +258,7 @@
     display: inline-block;
     vertical-align: top;
     margin-bottom: 10%;
+
 }
 
 .words, #game_window{
@@ -301,9 +303,9 @@
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 1em;
     margin-left: 1.5%;
-    margin-top: -15%;
+    margin-top: -10%;
     width: 580px;
-    height: 550px;
+    height: 700px;
     overflow: scroll;
     text-align: center;
 }
@@ -404,7 +406,7 @@
     margin-left: 1.5%;
     margin-top: -52%;
     width: 580px;
-    height: 450px;
+    height: 550px;
     overflow: scroll;
     text-align: center;
 }
@@ -418,7 +420,7 @@
 #rescuePengImg{
     width:200px;
     height: 200px;
-    margin-top: -7%;
+
   /*  margin-right: 10%;*/
 }
 
