--- a/app/assets/stylesheets/single_game.css
+++ b/app/assets/stylesheets/single_game.css
@@ -1,9 +1,9 @@
 /*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);
 */
 
-#contatiner{
+/*#contatiner{
     width: 100%;
-}
+}*/
 
 #ani_container {
     background: url(/assets/backgrounds/background1.jpg);
