--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -1,6 +1,8 @@
 #game_window {
   width: 100%;
   background: #C9E7EF;
+  -webkit-border-radius: 0.7em;
+  -moz-border-radius: 0.7em;
   border-radius: 0.7em;
   margin: 0;
   height: 60em;
