--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,8 +8,10 @@
     = csrf_meta_tags
   %body
 
-
+    %div.icon-menu &#9776; Menu
     %nav
+      %div.icon-close
+        = image_tag('http://i.imgur.com/fT59SxO.png');
       - if @current_user
         %div.current_user_box
           = image_tag(@current_user.avatar, :class => 'avatar')
