--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -19,4 +19,7 @@
       = f.label :native_language, "Your Language"
       = f.select(:native_language, LANGUAGES)# makes a dropdown from the constant LANGUAGES
     %div.formsubmit
-      = f.submit
+      - if @current_user.present?
+        = f.submit 'Update!'
+      - else
+        = f.submit 'Sign Up!'
