--- a/app/assets/stylesheets/single_game.css
+++ b/app/assets/stylesheets/single_game.css
@@ -97,17 +97,19 @@
     color: #fff;
     position: relative;
     font-size: 20px;
+    -webkit-appearance: none;
+       -moz-appearance: none;
     -webkit-border-radius: 0.5em;
-    -moz-border-radius: 0.5em;
+       -moz-border-radius: 0.5em;
     border-radius: 0.5em;
     -webkit-box-shadow: 1px 2px 0 0;
-    -moz-box-shadow: 1px 2px 0 0;
+       -moz-box-shadow: 1px 2px 0 0;
     box-shadow: 1px 2px 0 0;
     background-color: #f34223;
     -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+       -moz-transition: all 0.3s ease-in-out;
+         -o-transition: all 0.3s ease-in-out;
+            transition: all 0.3s ease-in-out;
 }
 
 #btnsubmit:hover{
@@ -541,7 +543,7 @@
     .answers, .words {
         width: 130px;
         top: 0;
-        max-height: 550px;
+        max-height: 500px;
         left: auto;
         right: 0;
         z-index: 2010;
