--- a/app/views/pages/about.haml
+++ b/app/views/pages/about.haml
@@ -1,22 +1,21 @@
-%h1.about Fireball
+%h1.about#title Fireball
+%h2.about#sub-title - Rescue peng -
 
-%div.about
-  %h2 Play in over 50 languages.
+%div.about#summary
+  %h3 Play in over 50 languages.
   %div.about_peng
-    = image_tag('/assets/emoticons/peng.png')
-  %h2 Peng the penguin likes to chat!
-  %h2 Test your language skills!
-
-
-%div.signup_signin
-  = link_to("Sign up", new_user_path, :class => 'formsubmit')
-  = link_to("Sign in", login_path, :class => 'formsubmit')
+    = image_tag('/assets/emoticons/happy.png')
+  %p Peng the penguin likes to chat!
+  %p Test your language skills!
+  %div.signup_signin
+    = link_to("Sign up", new_user_path, :class => 'formsubmit')
+    = link_to("Sign in", login_path, :class => 'formsubmit')
 
 
 %div.us_box
   %div.me_box
     %div.bio_img
-      = image_tag( asset_path('/assets/emoticons/happy.png') )
+      = image_tag( asset_path('/assets/emoticons/punch.png') )
     %h3 Rira
     %ul.links
       %li
