--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -1007,4 +1007,11 @@ footer {
     margin-left: 40%;
   }
 
+  #speak, #scroll-to-top {
+    height: 45px;
+    width: 65px;
+    font-size: 12px;
+    text-align: center;
+  }
+
 }
